# luana_varela_vacari_embarcatech_HBr_2025

./: README.md
Pojeto_Final_Fase_2/monitor_energia/: .gitignore  CMakeLists.txt  README.md  concat.py  parser.py
Pojeto_Final_Fase_2/monitor_energia/lib/: ads1115_adc.c  ads1115_adc.h  ads1115_adc_mock.c  ads1115_adc_wrapper.c  energy_monitor.c  energy_monitor.h  logger.c  logger.h  rtc_ntp.c  rtc_ntp.h  sd_card.c  sd_card.h  sd_card_log_task.c  sd_card_log_task.h  thingspeak.c  thingspeak.h  utils.c  utils.h  wifi_manager.c  wifi_manager.h
Pojeto_Final_Fase_2/monitor_energia/src/: main.c
Pojeto_Final_Fase_2/sd_card_/: sd_card.c  sd_card.h  sd_card_simples.c
Pojeto_Final_Fase_2/sd_card_simples/: CMakeLists.txt  sd_card_simples.c
Projeto_Final_Fase1/: CMakeLists.txt  Projeto_Final.c  README.md
Projetos/Galton_Board/: CMakeLists.txt  Galton_Board.c  README.md  main.c
Projetos/Galton_Board/include/: bola.h  display.h  histograma.h  pinos.h  util.h
Projetos/Galton_Board/src/: bola.c  display.c  histograma.c  pinos.c
Projetos/Sintetizador_de_Audio/: CMakeLists.txt  README.md
Projetos/Sintetizador_de_Audio/inc/: audio.h  botoes.h  comuns.h  leds.h  oled.h
Projetos/Sintetizador_de_Audio/src/: audio.c  botoes.c  leds.c  main.c  oled.c
atividades/: README.md
atividades/semana_12/Tarefa_1_RTOS/: CMakeLists.txt  README.md
atividades/semana_12/Tarefa_1_RTOS/include/: FreeRTOSConfig.h  comuns.h  tarefas.h
atividades/semana_12/Tarefa_1_RTOS/src/: controle_botao.c  controle_buzzer.c  controle_led.c  main.c
atividades/semana_12/Tarefa_2_RTOS/: CMakeLists.txt  README.md
atividades/semana_12/Tarefa_2_RTOS/include/: buttons.h  oled.h  reaction_time.h  rgb_led.h
atividades/semana_12/Tarefa_2_RTOS/src/: buttons.c  main.c  oled.c  reaction_time.c  rgb_led.c
atividades/semana_12/meu_projeto_freertos/: CMakeLists.txt
atividades/semana_12/meu_projeto_freertos/src/: main.c
atividades/semana_16/acelerometro/: CMakeLists.txt  acelerometro.c
atividades/semana_6/contador_decrescente/: CMakeLists.txt  Contador_Decrescente.c  README.md
atividades/semana_6/joystick/: CMakeLists.txt  README.md  joystick.c
atividades/semana_6/temperatura/: CMakeLists.txt  README.md  temperatura.c
atividades/semana_6/temperatura/temperatura/: CMakeLists.txt
atividades/semana_7/arquitetura_modular/: CMakeLists.txt  README.md
atividades/semana_7/arquitetura_modular/app/: main.c
atividades/semana_7/arquitetura_modular/drivers/: led_embutido.c
atividades/semana_7/teste_unitario/: CMakeLists.txt  README.md
atividades/semana_7/teste_unitario/include/: adc.h
atividades/semana_7/teste_unitario/src/: adc.c
atividades/semana_7/teste_unitario/teste/: teste_adc.c
sd_card_simples/: CMakeLists.txt  sd_card_simples.c
sd_card_simples/fatfs/: integer.h
sd_card_simples/sd_driver/: hw_config.c
(+3 files in other folders)
